# beacon

./: .dockerignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Trunk.toml  docker-compose.yml  index.html  styles.css
backend/: Cargo.toml
backend/migrations/: 20260315055228_create_users.sql
backend/src/: auth.rs  lib.rs  main.rs  state.rs  ws.rs
docker/: nginx.conf
shared/src/: lib.rs
src/: app.rs  main.rs  pages.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/pages/: chat.rs  landing.rs  login.rs  me.rs  not_found.rs  register.rs
