[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { path = "./shared" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "CloseEvent",
  "ErrorEvent",
  "Event",
  "HtmlInputElement",
  "Location",
  "MessageEvent",
  "WebSocket",
  "Window",
] }

[workspace]
members = ["backend", "shared"]
default-members = [".", "backend"]
resolver = "2"
