[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { path = "./shared" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "CloseEvent",
  "ErrorEvent",
  "Event",
  "History",
  "HtmlInputElement",
  "RequestCredentials",
  "Location",
  "MessageEvent",
  "Storage",
  "WebSocket",
  "Window",
] }

[workspace]
members = ["backend", "shared"]
default-members = ["."]
resolver = "2"
