[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8.8", features = ["form", "ws"] }
axum-login = "0.18.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tower-sessions = { version = "0.14.0", features = ["private"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
anyhow = "1.0.102"
password-auth = "1.0.0"
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
tokio-tungstenite = "0.27.0"
